<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RadioFeedz</string>
    <string name="cannot_save_picture">Oops! Picture for this feed cannot be saved.</string>
    <string name="might_not_save_picture">Picture for this feed might not have been saved.</string>
    <string name="cannot_get_picture">Oops! Picture for this feed cannot be retrieved.</string>
    <string name="not_connected">Oops! This device does not appear connected to the Internet. Check Device Settings.</string>
    <string name="disabled_download">Oops! Downloads are disabled on Wifi and/or mobile networks, the download will not start. Check Application Settings.</string>
    <string name="disabled_refresh">Oops! Feed refreshes are disabled on Wifi and/or mobile networks, the refresh will not start. Check Application Settings.</string>
    <string name="please_clip_feed_url">You can add a feed by copying it to the clipboard. Then press this button.</string>
    <string name="add_feed_clipboard">Add feed from clipboard</string>
    <string name="cannot_add_feed">Oops! Issue adding the feed. Please retry.</string>
    <string name="ask_add_feed">Do you want to add the feed located at </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="today">Today</string>
    <string name="ui_sep">-</string>
    <string name="drawer_all">All</string>
    <string name="drawer_today">Today</string>
    <string name="drawer_new">New</string>
    <string name="drawer_downloaded">Downloaded</string>
    <string name="drawer_archived">Archived</string>
    <string name="drawer_audio">Audio podcasts</string>
    <string name="drawer_open">Apply filters</string>
    <string name="drawer_close">Filters applied</string>
    <string name="drawer_closed_title">Your news</string>
    <string name="drawer_opened_title">Filter your news</string>
    <string name="title_activity_catalog">Catalog</string>
    <string name="emptynews">It looks like you have no news to read!</string>
    <string name="last_refresh">Last update</string>
    <string name="added_feed">Feed added. Find it in the left pane</string>
    <string name="action_playlist">Create a playlist</string>
    <string name="press_back">Please press back, one more time.</string>
    <string name="prefs_category_lib">Libraries</string>
    <string name="prefs_summ_category_lib">Libraries used for this application</string>
    <string translatable="false" name="pref_items_lib_commons_lang">Apache Commons Lang 3.0</string>
    <string translatable="false" name="summary_pref_items_lib_commons_lang">Apache License, Version 2.0</string>
    <string translatable="false" name="pref_items_lib_commons_io">Apache Commons IO</string>
    <string translatable="false" name="summary_pref_items_lib_commons_io">Apache License, Version 2.0</string>
    <string translatable="false" name="pref_items_lib_gson">Gson</string>
    <string translatable="false" name="summary_pref_items_lib_gson">Apache License, Version 2.0</string>
    <string translatable="false" name="pref_items_lib_glide">Glide</string>
    <string translatable="false" name="summary_pref_items_lib_glide">BSD, part MIT and Apache 2.0</string>
    <string translatable="false" name="pref_items_lib_acra">Acra</string>
    <string translatable="false" name="summary_pref_items_lib_acra">Apache License, Version 2.0</string>
    <string translatable="false" name="pref_items_lib_cloudant">Cloudant client</string>
    <string translatable="false" name="summary_pref_items_lib_cloudant">Apache License, Version 2.0</string>
    <string name="error_no_app_for_media">No app found to read this media</string>
    <string name="no_feed">You have no feed. Add some from the catalog by clicking this + button</string>
    <string name="cannot_retrieve_feed">Oops! Something went wrong when retrieving some of your news. Try again later</string>

</resources>
